fixes for message parts layout on mobile

--- a/modules/core/site.css
+++ b/modules/core/site.css
@@ -238,8 +238,6 @@ div.unseen, .unseen .subject { font-weight: 700; }
     .folder_cell { display: block; max-width: 96%; width: 96%; padding: 0px !important;}
     .folder_list { padding: 0px !important; font-size: 120%; margin-right: 0px; display: none; width: 100%; }
     .content_cell { display: block; width: 100%; }
-    .msg_parts { padding-left: 5px !important; }
-    .msg_parts td { font-size: 90%; padding: 0px !important; padding-right: 5px !important; }
     .content_title { padding-left: 40px; padding-top: 20px; margin-bottom: 5px; }
     .folder_toggle { display: block; top: 19px; left: 0px; }
     .account_icon { width: 16px; height: 16px; vertical-align: -5px; }
