--- a/modules/imap/site.css
+++ b/modules/imap/site.css
@@ -26,16 +26,16 @@
 .header_subject th { font-size: 1.3em; padding-top: 10px; }
 .header_subject th div img { margin-right: 10px; margin-left: 11px; }
 .msg_parts { table-layout: fixed; border-top: solid 1px #ddd; padding-top: 20px; padding-left: 20px; width: 100%; padding-bottom: 40px; }
-.msg_parts td { padding: 3px; padding-right: 10px; white-space: nowrap; overflow: hidden;  text-overflow: ellipsis; }
+.msg_parts td { padding: 3px; padding-right: 10px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 20%; }
 .download_link { width: 100px; }
 .row_indent_0 { display: inline; padding: 0px; }
-.row_indent_1 { display: inline; padding-left: 20px; }
-.row_indent_2 { display: inline; padding-left: 40px; }
-.row_indent_3 { display: inline; padding-left: 60px; }
-.row_indent_4 { display: inline; padding-left: 80px; }
-.row_indent_5 { display: inline; padding-left: 100px; }
-.row_indent_6 { display: inline; padding-left: 120px; }
-.row_indent_max { display: inline; padding-left: 140px; }
+.row_indent_1 { display: inline; padding-left: 15px; }
+.row_indent_2 { display: inline; padding-left: 30px; }
+.row_indent_3 { display: inline; padding-left: 45px; }
+.row_indent_4 { display: inline; padding-left: 60px; }
+.row_indent_5 { display: inline; padding-left: 75px; }
+.row_indent_6 { display: inline; padding-left: 90px; }
+.row_indent_max { display: inline; padding-left: 105px; }
 .header_links{ font-variant: small-caps; text-transform: lowercase; }
 .selected_part { background-color: #f5f5f5; }
 .imap_server_setup { table-layout: fixed; width: 100%; display: table; background-color: #fff; }
@@ -71,3 +71,4 @@
 .msg_part_encoding { width: 7%; }
 .msg_part_charset { width: 8%; }
 .msg_part_download { width: 10%; }
+@media screen and (max-device-width:480px) and (orientation : portrait) { .msg_parts td { padding-bottom: 5px !important; width: 25%; padding-left: 3px !important;} .part_size { width: 50px !important; } .part_encoding { display: none; } .part_charset { display: none; } .download_link { width: 50px !important; overflow: visible !important; }}
